public/article/style.css
body {
  background-color: var(--bg-color);
  color: var(--fg-color);
  font-family: "Lucida Grande";
  font-size: 125%;
}
@media only screen and (max-device-width: 812px) {
  body {
    font-size: 235%;
  }
}
img {
  width: 36.5vw;
  height: auto;
}
hr {
  margin-top: 20px !important;
  margin-bottom: 20px !important;
}
td {
  width: 50vw;
  padding: 0;
  text-align: center;
}
a.glossaryLink {
  color: #03006f;
}
#container {
  width: 83vw;
  min-height: 100vh;
  padding-left: 1vw;
  padding-right: 1vw;
  margin-left: 7.5vw;
  border-left: 1px solid #cccccc;
  border-right: 1px solid #cccccc;
}
#container > * {
  margin: 0;
}
#content > * {
  margin-top: 0;
}
#left-header {
  text-align: left;
}
#edition {
  font-weight: normal;
  text-align: right;
}
#left-header,#edition {
  margin: 0;
}
#title {
  text-align: center;
}
#comments {
  border: 1px solid #aaaaaa;
  margin-top: 20px;
  background-color: #c6fc02;
}
#comments * {
  margin-top: 5px;
  margin-left: 5px;
  margin-right: 5px;
  font-size: 90%;
  background-color: #c6fc02;
}
#comment-box {
  width: calc(100% - 15px);
  margin-bottom: 0;
}
#comment-box:invalid {
  font-weight: bold;
}
#comment-post-container {
  text-align: right;
  margin-top: 0;
}
#comment-post {
  font-size: 100%;
  font-family: "Lucida Grande";
  margin-top: 0;
  background-color: #4286f4;
  color: white;
}
#comment-name {
  margin-top: 0;
}
#comment-limit {
  font-size: 70%;
}
#comments {
  margin-top: 0;
}
#comments .line {
  width: calc(100% - 15px);
  height: 0;
  border: 1px solid #cccccc;
}
#comments .comment-content {
  margin-left: 1.5em;
  word-wrap: break-word;
}
#glossary * {
  margin: 0;
}
.blacklink {
  color: var(--fg-color);
}
.imageTable,.imageRow {
  width: 100%;
}
.imageCol {
  width: 50%;
  padding: 0;
}
.imageCol:first-child {
  text-align: center;
}
.imageCol:last-child {
  text-align: left;
}
.paragraph {
  margin-top: 10px !important;
  margin-bottom: 20px;
}

